# phosphor-ipmi-serial

./: .clang-format  .clang-tidy  .gitignore  .opencode.json  LICENSE  OWNERS  README.md  USAGE_AND_TESTING.md  basic_mode_parser.cpp  basic_mode_parser.hpp  command_table.cpp  command_table.hpp  event_loop.cpp  event_loop.hpp  main.cpp  main.hpp  meson.build  meson.options  message.hpp  message_handler.cpp  message_handler.hpp  message_parsers.cpp  message_parsers.hpp  phosphor-ipmi-serial.service  phosphor-ipmi-serial@.service  review.md  sessions_manager.cpp  sessions_manager.hpp  terminal_mode_parser.cpp  terminal_mode_parser.hpp  uart_channel.cpp  uart_channel.hpp
command/: channel_auth.cpp  channel_auth.hpp  get_message.cpp  get_message.hpp  session_cmds.cpp  session_cmds.hpp
debug/: frame_dumper.cpp  frame_dumper.hpp  statistics.cpp  statistics.hpp
test/: basic_mode_parser_test.cpp  checksum_test.cpp  meson.build  message_handler_test.cpp  session_test.cpp  terminal_mode_parser_test.cpp
